@@ -1,3 +1,9 @@
+2004-10-28  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* gnome-settings-xrdb.c: (append_xresource_file), (apply_settings):
+	Don't nuke .Xdefaults when restarting g-s-d. Patch from Nick
+	Welch <mack at incise org>. Closes bug #127050.
+
 2004-10-21  Sebastien Bacher  <seb128@debian.org>
 
 	* gnome-settings-default-editor.c: (vfs_change_cb):
